Redirect to chesskit github page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Welcome to ChessKit
+<head>
+    <meta http-equiv="Refresh" content="0; url='https://github.com/chesskit-app'" />
+</head>
+
+<body>
+    Welcome to ChessKit
+</body>
